# uart-console

./: .gitignore  README.md  pyproject.toml
uart_monitor/: __init__.py  cli.py
