[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uart-monitor"
version = "0.1.0"
description = "Monitor serial data over UART using pyftdi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
]
dependencies = [
    "pyftdi>=0.54.0",
    "pyserial>=3.5",
    "textual>=0.40.0",
]

[project.scripts]
uart-monitor = "uart_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
